Finita distinzione sessioni aperte e chiuse gestore Visualizzazione solo delle sessioni del gestore